--- a/pyside/Dockerfile
+++ b/pyside/Dockerfile
@@ -4,4 +4,4 @@ RUN apt-get -y update
 RUN apt-get install -y libqt4-dev cmake xvfb
 RUN pip install pyside
 
-CMD python
+RUN export PATH=/usr/local/lib/python2.7/site-packages/PySide/:$PATH
